indexed everything so stuff messed up; gonna add textures

--- a/LaboratoryWorks/Lab_3/engine/CMakeLists.txt
+++ b/LaboratoryWorks/Lab_3/engine/CMakeLists.txt
@@ -2,6 +2,8 @@ set(ENGINE_SRCS
     shader.cpp
     controls.cpp
     objloader.cpp
+    vboindexer.cpp
     )
 
 add_library(MyEngine ${ENGINE_SRCS})
+target_link_libraries(MyEngine assimp)
