added mesh and shader dummy; TODO: shader with textures and assimp Model

--- a/LaboratoryWorks/Lab_3/CMakeLists.txt
+++ b/LaboratoryWorks/Lab_3/CMakeLists.txt
@@ -9,12 +9,14 @@ set(ALL_LIBS
 	${OPENGL_LIBRARY}
 	glfw
 	GLEW
+    assimp
 )
 
 set(SRCS
     src/main.cpp
     engine/shader.hpp
     src/window.cpp
+    src/model.cpp
     )
 
 set(SHADERS
