great load&texture implementation

--- a/LaboratoryWorks/Lab_3/engine/CMakeLists.txt
+++ b/LaboratoryWorks/Lab_3/engine/CMakeLists.txt
@@ -3,6 +3,7 @@ set(ENGINE_SRCS
     controls.cpp
     objloader.cpp
     vboindexer.cpp
+    stb_image.cpp
     )
 
 add_library(MyEngine ${ENGINE_SRCS})
