Controllers bare-bones (not moving yet); includes rework; physical objects rework

--- a/LaboratoryWorks/Lab_3/engine/CMakeLists.txt
+++ b/LaboratoryWorks/Lab_3/engine/CMakeLists.txt
@@ -5,9 +5,10 @@ set(ENGINE_SRCS
     window.cpp
     stb_image.cpp
     light.cpp
-    game.cpp
     rmanager.cpp
     physics.cpp
+    entity.cpp
+    game.cpp
     )
 
 add_library(MyEngine ${ENGINE_SRCS})
